# Visual-Region

./: README.md  pyproject.toml
bunny/: constants.py  conversation.py
bunny/eval/: block_influence_calc.py  cal_dis  eval_tdiuc_distri.py  eval_vqa_distri.py  infographicsvqa_eval.py  model_vqa.py  model_vqa_loader.py  model_vqa_mmbench.py  model_vqa_mmmu.py  model_vqa_science.py
bunny/eval/ai2d/: ai2d_eval.py  ai2d_test.py
bunny/eval/chartqa/: chartqa_eval.py  chartqa_test.py
bunny/eval/docvqa/: docvqa_eval.py  docvqa_test.py
bunny/eval/hallusionbench/: hallusionbench_eval.py  hallusionbench_test.py
bunny/model/: __init__.py  builder.py  bunny_arch.py
bunny/model/language_model/: bunny_llama_m.py  bunny_llama_moe.py  bunny_llama_moe_mm_s.py  bunny_phi3.py  bunny_phi3_m.py  bunny_phi3_moe.py  bunny_phi3_moe_mm.py  bunny_phi3_moe_mm_s.py  llava_llama.py  llava_mistral.py  llava_qwen.py
bunny/model/language_model/llama/: modeling_llama.py
bunny/model/language_model/llama_m/: modeling_llama.py
bunny/model/language_model/llama_moe/: modeling_llama.py
bunny/model/language_model/llama_moe_mms/: modeling_llama.py
bunny/model/language_model/phi3_m/: modeling_phi3.py
bunny/model/multimodal_encoder/: builder.py  dino_encoder.py  vae_encoder.py
bunny/train/: bunny_trainer.py  train.py
bunny/util/: data_utils.py  mm_utils.py
script/: convert_language_vision_model_to_llava_models.py  convert_moe.py
script/eval/full/: eval.sh  evaluation.md
script/train/: finetune_all_moe.sh  finetune_mlp_moe.sh  finetune_visual_region.sh
(+6 files in other folders)
